--- a/little-lookup/values.yaml
+++ b/little-lookup/values.yaml
@@ -21,14 +21,12 @@ ingress:
   enabled: false
   annotations:
     kubernetes.io/ingress.class: nginx
-    kubernetes.io/tls-acme: "true"
   path: /
   hosts: []
 
 persistence:
-  local:
-    enabled: false
-    existingclaim: myvolumelocal
+  enabled: false
+  existingclaim: mypvc
 
 resources:
   requests:
