b64enc the psk in secret

--- a/little-lookup/templates/secrets.yaml
+++ b/little-lookup/templates/secrets.yaml
@@ -11,6 +11,6 @@ metadata:
     release: {{ .Release.Name }}
 type: Opaque
 data:
-  psk: {{ .Values.psk.value }}
+  psk: {{ .Values.psk.value | b64enc | quote }}
 
 {{- end }}
