add values for pool size and worker num

--- a/little-lookup/templates/deployment.yaml
+++ b/little-lookup/templates/deployment.yaml
@@ -32,6 +32,10 @@ spec:
           env:
             - name: LITTLE_LOOKUP_DATABASE
               value: postgres://{{ .Values.db.username }}:{{ .Values.db.password }}@{{ .Values.db.hostname }}:{{ .Values.db.port }}/{{ .Values.db.dbname }}
+            - name: LITTLE_LOOKUP_POOL_SIZE_PER_WORKER
+              value: {{ .Values.db.pool_size_per_worker }}
+            - name: LITTLE_LOOKUP_WORKER_NUM
+              value: {{ .Values.db.worker_num }}
 {{- if .Values.debug }}
             - name: RUST_BACKTRACE
               value: "1"
