--- a/little-lookup/templates/secrets.yaml
+++ b/little-lookup/templates/secrets.yaml
@@ -14,3 +14,17 @@ data:
   psk: {{ .Values.psk.value | b64enc | quote }}
 
 {{- end }}
+
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ .Values.pgpassSecretName }}
+  labels:
+    app: {{ template "little-lookup.name" . }}
+    chart: {{ template "little-lookup.chart" . }}
+    heritage: {{ .Release.Service }}
+    release: {{ .Release.Name }}
+type: Opaque
+stringData:
+  .pgpass: |-
+    {{ .Values.db.hostname }}:{{ .Values.db.port }}:{{ .Values.db.dbname }}:{{ .Values.db.username }}:{{ .Values.db.password }}
