--- a/little-lookup/templates/deployment.yaml
+++ b/little-lookup/templates/deployment.yaml
@@ -31,7 +31,7 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           env:
             - name: LITTLE_LOOKUP_DATABASE
-              value: "postgres://{{ .Values.db.username }}:@{{ .Values.db.hostname }}:{{ .Values.db.port }}/{{ .Values.db.dbname }}"
+              value: "postgres://{{ .Values.db.username }}@{{ .Values.db.hostname }}:{{ .Values.db.port }}/{{ .Values.db.dbname }}"
             - name: LITTLE_LOOKUP_POOL_SIZE_PER_WORKER
               value: "{{ .Values.db.pool_size_per_worker }}"
             - name: LITTLE_LOOKUP_WORKER_NUM
