--- a/little-lookup/templates/deployment.yaml
+++ b/little-lookup/templates/deployment.yaml
@@ -29,6 +29,8 @@ spec:
           secret:
             secretName: {{ .Values.psk.secretName }}
 {{- end }}
+      securityContext:
+{{ toYaml .Values.securityContext | indent 8 }}
       containers:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
