--- a/little-lookup/templates/ingress.yaml
+++ b/little-lookup/templates/ingress.yaml
@@ -17,16 +17,10 @@ metadata:
 spec:
 {{- if .Values.ingress.tls }}
   tls:
-  {{- range .Values.ingress.tls }}
-    - hosts:
-      {{- range .hosts }}
-        - {{ . }}
-      {{- end }}
-      secretName: {{ .secretName }}
-  {{- end }}
+{{ toYaml .Values.ingress.tls | indent 4 }}
 {{- end }}
   rules:
-  {{- range .Values.ingress.hosts }}
+{{- range .Values.ingress.hosts }}
     - host: {{ . }}
       http:
         paths:
@@ -34,5 +28,5 @@ spec:
             backend:
               serviceName: {{ $fullName }}
               servicePort: http
-  {{- end }}
+{{- end }}
 {{- end }}
