make probes optional

--- a/pg-push/templates/deployment.yaml
+++ b/pg-push/templates/deployment.yaml
@@ -50,16 +50,20 @@ spec:
             - name: http
               containerPort: 8088
               protocol: TCP
+{{- if .Values.livenessProbe }}
           livenessProbe:
             httpGet:
               path: /
               port: 8088
             timeoutSeconds: 30
+{{- end }}
+{{- if .Values.readinessProbe }}
           readinessProbe:
             httpGet:
               path: /
               port: 8088
             timeoutSeconds: 30
+{{- end }}
           resources:
 {{ toYaml .Values.resources | indent 12 }}
           volumeMounts:
